--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
   padding: 0;
   scroll-behavior: smooth;
   -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 *::-webkit-scrollbar {
